[package]
name = "rs-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
rstest = "0.18.2"
tokio = { version = "1.33.0", features = ["rt", "macros"] }
