[package]
name = "testcase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
test-case = "3.2.1"
tokio = { version = "1.33.0", features = ["macros", "rt"] }
